--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
     var currentIndex = 0; // Index of the prediction to display
 
     function openWebSocket() {
-        var url = 'wss://c74hber8wo.com//games-frame/sockets/crash?whence=22&fcountry=8&ref=1&gr=1357&appGuid=games-web-master&lng=en_GB&access_token=eyJhbGciOiJFUzI1NiIsImtpZCI6IjEiLCJ0eXAiOiJKV1QifQ.eyJzdWIiOiI1MC85MTE4NTk0OTMiLCJwaWQiOiIxIiwianRpIjoiMC9lMDIzYTA4OGUyZTc0ZDA3MGI3YzdiNDRmM2M2NmZiNjE2YzRlN2E4MGJlM2Y2M2Y1MjVkM2VlMDc2ZmJkZjJmIiwiYXBwIjoiOTNkMGUxZGMyNjBhN2Y4OV8yIiwieHBqIjoiMCIsInhnciI6IjEzNTciLCJuYmYiOjE3MzI1NjAwNTQsImV4cCI6MTczMjU2MTI1NCwiaWF0IjoxNzMyNTYwMDU0fQ.guYCYYftFp8F4UM60AduK4Jxce2EShv36l_aTujcgHEGBxKtnIqEEDg4UXjzQAtjs6Vcg_y_G-N1mOSW0yGsxQ';
+        var url = 'wss://cxjtptayah.com/games-frame/sockets/crash?whence=22&fcountry=8&ref=1&gr=1357&appGuid=games-web-master&lng=en_GB&access_token=eyJhbGciOiJFUzI1NiIsImtpZCI6IjEiLCJ0eXAiOiJKV1QifQ.eyJzdWIiOiI1MC85MTE4NTk0OTMiLCJwaWQiOiIxIiwianRpIjoiMC9lMDIzYTA4OGUyZTc0ZDA3MGI3YzdiNDRmM2M2NmZiNjE2YzRlN2E4MGJlM2Y2M2Y1MjVkM2VlMDc2ZmJkZjJmIiwiYXBwIjoiOTNkMGUxZGMyNjBhN2Y4OV8yIiwieHBqIjoiMCIsInhnciI6IjEzNTciLCJuYmYiOjE3MzI1NjAwNTQsImV4cCI6MTczMjU2MTI1NCwiaWF0IjoxNzMyNTYwMDU0fQ.guYCYYftFp8F4UM60AduK4Jxce2EShv36l_aTujcgHEGBxKtnIqEEDg4UXjzQAtjs6Vcg_y_G-N1mOSW0yGsxQ';
         ws = new WebSocket(url);
         ws.onopen = function() {
             console.log('WebSocket opened');
